force-app/main/default/objects/Case/fields/Created_by_Country__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Country__c</fullName>
    <formula>CreatedBy.Country</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by Country</label>
    <type>Text</type>
</CustomField>