force-app/main/default/objects/Case/fields/Created_by_Level__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Level__c</fullName>
    <description>Sales Offer - to return the Levels of the User creating the Case, for approvals</description>
    <formula>CreatedBy.Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by Level</label>
    <type>Text</type>
</CustomField>