force-app/main/default/objects/Case/fields/Created_From_Website__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Website__c</fullName>
    <description>QAC, This field is used to indicate that cases are getting created from website.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Created From Website</label>
    <length>10</length>
    <type>Text</type>
</CustomField>