force-app/main/default/objects/Case/fields/CRM_Number__c.field-meta.xml
<CustomField>
    <fullName>CRM_Number__c</fullName>
    <description>Field for Storing Enhancement / New User Story Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Provide the Enhancement / New User Story Number.</inlineHelpText>
    <label>CRM Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>