force-app/main/default/objects/Case/fields/Custom_Thread_ID__c.field-meta.xml
<CustomField>
    <fullName>Custom_Thread_ID__c</fullName>
    <description>Custom Thread ID used to solve issue with Conga Email templates and Email-to-Case responses not being attached to cases</description>
    <formula>&quot;ref:_&quot; &amp; LEFT($Organization.Id,5) &amp; RIGHT($Organization.Id,5)&amp; &quot;._&quot; &amp; LEFT(Id,5) &amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(Id,5) &amp; &quot;:ref&quot;</formula>
    <label>Custom Thread ID</label>
    <type>Text</type>
</CustomField>