force-app/main/default/objects/Case/fields/Customer_Advice_Method__c.field-meta.xml
<CustomField>
    <fullName>Customer_Advice_Method__c</fullName>
    <description>Freight - Drop down showing which resolution method the caller would prefer to get the feedback ie, phone, email, sms/text, other</description>
    <inlineHelpText>Mandatory field. Select as per customer request</inlineHelpText>
    <label>Preferred customer advice method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>SMS_Text</fullName>
                <label>SMS/Text</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other (add in Comments)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>