force-app/main/default/objects/Case/fields/Customer_Not_In_Home_Port__c.field-meta.xml
<CustomField>
    <fullName>Customer_Not_In_Home_Port__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC: Manual check to see if customer is in home port, used to emergency expense calculation</description>
    <label>Customer Not In Home Port</label>
    <type>Checkbox</type>
</CustomField>