force-app/main/default/objects/Case/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <label>Customer Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CL</fullName>
                <label>Chairman&apos;s Lounge</label>
            </value>
            <value>
                <fullName>PO</fullName>
                <label>Platinum One</label>
            </value>
            <value>
                <fullName>PL</fullName>
                <label>Platinum</label>
            </value>
            <value>
                <fullName>GD</fullName>
                <label>Gold</label>
            </value>
            <value>
                <fullName>SL</fullName>
                <label>Silver</label>
            </value>
            <value>
                <fullName>BR-NON</fullName>
            </value>
            <value>
                <fullName>NON-TIERED</fullName>
                <label>Non-tiered</label>
            </value>
            <value>
                <fullName>Lifetime Gold</fullName>
                <isActive>false</isActive>
                <label>Lifetime Gold</label>
            </value>
            <value>
                <fullName>Lifetime Silver</fullName>
                <isActive>false</isActive>
                <label>Lifetime Silver</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>