force-app/main/default/objects/Case/fields/Damage_Sustained__c.field-meta.xml
<CustomField>
    <fullName>Damage_Sustained__c</fullName>
    <description>QCC: Field to store/input the damaged sustained to the damaged baggage</description>
    <inlineHelpText>CCC: Hold CTRL key to select multiple</inlineHelpText>
    <label>Damage Sustained</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wheel snapped or broken off x 1</fullName>
            </value>
            <value>
                <fullName>Wheel snapped or broken off x 2</fullName>
            </value>
            <value>
                <fullName>Wheel snapped or broken off x 3</fullName>
            </value>
            <value>
                <fullName>Wheel snapped or broken off x 4</fullName>
            </value>
            <value>
                <fullName>Handle broken</fullName>
            </value>
            <value>
                <fullName>Locks</fullName>
            </value>
            <value>
                <fullName>Trolley</fullName>
            </value>
            <value>
                <fullName>Zip - broken pull</fullName>
            </value>
            <value>
                <fullName>Zip - replace sliders and tab</fullName>
            </value>
            <value>
                <fullName>Zip - completely replace</fullName>
            </value>
            <value>
                <fullName>Dent / pushed in</fullName>
            </value>
            <value>
                <fullName>Frame crushed</fullName>
            </value>
            <value>
                <fullName>Completely destroyed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>