force-app/main/default/objects/Case/fields/Date_Effective_DAT__c.field-meta.xml
<CustomField>
    <fullName>Date_Effective_DAT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Effective</label>
    <type>Date</type>
</CustomField>