force-app/main/default/objects/Case/fields/Date_Example__c.field-meta.xml
<CustomField>
    <fullName>Date_Example__c</fullName>
    <defaultValue>&quot;Campaign or Adhoc Type - start date has to be 1st of month.&quot; &amp; BR () &amp; BR() &amp;
&quot;Type = Campaign - Where a flyer is required to be created for company employees to register (Platinum Accelerate, Gold Accelerate, 50% Bonus Status Credits). Case must be submitted and approved by 8th of month, with campaign to commence 1st of following month.&quot; &amp; BR () &amp; BR() &amp; &quot;Type = Campaign - Where a flyer is required to be created for company employees to register (FOC Qantas Club Waiver), Case must be submitted and approved by 19th of month, with campaign to commence 1st of following month.&quot; &amp; BR () &amp; BR() &amp;
&quot;Type = Adhoc - Targeted to individuals in a company. Case must be submitted and approved by 19th of month to commence 1st of following month.&quot; &amp; BR () &amp; BR() &amp;
&quot;Type = Bespoke Incentive, Campaign Start Date has to be greater than 6 weeks from Case Creation Date.&quot; &amp; BR () &amp; BR() &amp;
&quot;Type = Survey, Campaign Start Date has to be greater than 2 weeks from the Case Creation Date.&quot;</defaultValue>
    <description>Sales Offer - default value Help Text for Campaign Start Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Example</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>