force-app/main/default/objects/Case/fields/DateIschecked__c.field-meta.xml
<CustomField>
    <fullName>DateIschecked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DateIschecked</label>
    <type>Checkbox</type>
</CustomField>