force-app/main/default/objects/Case/fields/Default_Business_Phone__c.field-meta.xml
<CustomField>
    <fullName>Default_Business_Phone__c</fullName>
    <description>Default value from the Corporate Scheme</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Existing Business Phone</label>
    <type>Phone</type>
</CustomField>