force-app/main/default/objects/Case/fields/Default_Coordinator_Email__c.field-meta.xml
<CustomField>
    <fullName>Default_Coordinator_Email__c</fullName>
    <description>Default value from Corporate scheme</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Existing Coordinator Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>