force-app/main/default/objects/Case/fields/Default_Coordinator_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Coordinator_Name__c</fullName>
    <description>Default value from the Corporate Scheme</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Existing Coordinator Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>