force-app/main/default/objects/Case/fields/Default_Scheme_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Default_Scheme_End_Date__c</fullName>
    <description>Scheme End Date from the Corporate Scheme Record</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Default Scheme End Date</label>
    <type>Date</type>
</CustomField>