force-app/main/default/objects/Case/fields/Default_Type_of_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Default_Type_of_Coordinator__c</fullName>
    <description>Default value from Corporate Scheme</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Management</label>
    <length>255</length>
    <type>Text</type>
</CustomField>