force-app/main/default/objects/Case/fields/Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>Delay_Reason__c</fullName>
    <description>QCC: Used to store the delay reason for the case specific flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Delay Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>