force-app/main/default/objects/Case/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>QCC: Used to store the delivery date of lost/delayed baggage for the case specific insurance letter</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>