force-app/main/default/objects/Case/fields/Delivery_Port__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Port__c</fullName>
    <description>QCC: Used to store the delivery port for delayed/lost baggage for the case specific insurance letter</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivery Port</label>
    <length>255</length>
    <type>Text</type>
</CustomField>