force-app/main/default/objects/Case/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>B&amp;G</fullName>
            </value>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>Future Planet</fullName>
            </value>
            <value>
                <fullName>Group Sales</fullName>
            </value>
            <value>
                <fullName>Customer Service Unit</fullName>
            </value>
            <value>
                <fullName>QIC</fullName>
            </value>
            <value>
                <fullName>QIS</fullName>
            </value>
            <value>
                <fullName>Salesforce Support</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
            <value>
                <fullName>Sales Performance</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>SSU</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Sales Support</fullName>
            </value>
            <value>
                <fullName>Customer Service Support</fullName>
            </value>
            <value>
                <fullName>FPO</fullName>
            </value>
            <value>
                <fullName>Terminal Claims</fullName>
            </value>
            <value>
                <fullName>Freight Invoices</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>