force-app/main/default/objects/Case/fields/Departure_Airport__c.field-meta.xml
<CustomField>
    <fullName>Departure_Airport__c</fullName>
    <description>QCC: Used to track/store the departure airport information on a case</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Departure Airport</label>
    <length>50</length>
    <type>Text</type>
</CustomField>