force-app/main/default/objects/Case/fields/Departure_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>Departure_Airport_Code__c</fullName>
    <description>Storing departure airport code from integration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Departure Airport Code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>