force-app/main/default/objects/Case/fields/Departure_City__c.field-meta.xml
<CustomField>
    <fullName>Departure_City__c</fullName>
    <description>QCC: Used to store/show the segment departure city</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Departure City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>