force-app/main/default/objects/Case/fields/Departure_Country__c.field-meta.xml
<CustomField>
    <fullName>Departure_Country__c</fullName>
    <description>QCC: Storing Departure Country from CAP</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Departure Country</label>
    <length>128</length>
    <type>Text</type>
</CustomField>