force-app/main/default/objects/Case/fields/Departure_Date_system__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_system__c</fullName>
    <description>Captures Departure Date from Departure Date/Time</description>
    <formula>RIGHT( LEFT(Departure_Date_Time__c , 10) , 4)+&apos;-&apos;+RIGHT( LEFT(Departure_Date_Time__c , 5),2)+&apos;-&apos;+LEFT(Departure_Date_Time__c , 2)</formula>
    <inlineHelpText>Departure Date</inlineHelpText>
    <label>Departure Date (system)</label>
    <type>Text</type>
</CustomField>