force-app/main/default/objects/Case/fields/Departure_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_Time__c</fullName>
    <description>QCC: Created to show/store Departure Date/Time of flight for which this Case is raised.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CCC: Format DD/MM/YYYY HH:MM:SS</inlineHelpText>
    <label>Departure Date/Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>