force-app/main/default/objects/Case/fields/Departure_Delay_Time_Mins__c.field-meta.xml
<CustomField>
    <fullName>Departure_Delay_Time_Mins__c</fullName>
    <description>Added for Insurance Letters in &apos;QCC Insurance Letter Layout&apos;  Case  Page Layout</description>
    <formula>MOD(FLOOR((DATETIMEVALUE(/* Year Logic */ 
MID(Actual_Departure_Date_Time__c, 7,4) +&apos;-&apos;+ 
/* Month Logic */ 
MID(Actual_Departure_Date_Time__c, 
FIND(&quot;/&quot;,Actual_Departure_Date_Time__c) + 1, 
FIND(&quot;/&quot;,Actual_Departure_Date_Time__c, FIND(&quot;/&quot;,Actual_Departure_Date_Time__c) + 1) - 
FIND(&quot;/&quot;,Actual_Departure_Date_Time__c) - 1 
)+&apos;-&apos;+    
/* Day Logic */ 
LEFT(Actual_Departure_Date_Time__c, 
FIND(&quot;/&quot;,Actual_Departure_Date_Time__c) - 1) +&apos; &apos;+ 
/* Time Logic */ 
RIGHT(Actual_Departure_Date_Time__c, 8) )  - DATETIMEVALUE( /* Year Logic */ 
MID(Departure_Date_Time__c, 7,4) +&apos;-&apos;+ 
/* Month Logic */ 
MID(Departure_Date_Time__c, 
FIND(&quot;/&quot;,Departure_Date_Time__c) + 1, 
FIND(&quot;/&quot;,Departure_Date_Time__c, FIND(&quot;/&quot;,Departure_Date_Time__c) + 1) - 
FIND(&quot;/&quot;,Departure_Date_Time__c) - 1 
)+&apos;-&apos;+    
/* Day Logic */ 
LEFT(Departure_Date_Time__c, 
FIND(&quot;/&quot;,Departure_Date_Time__c) - 1) +&apos; &apos;+ 
/* Time Logic */ 
RIGHT(Departure_Date_Time__c, 8) ))* 1440),60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Delay Time (Mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>