force-app/main/default/objects/Case/fields/Departure_UTC_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Departure_UTC_Date_Time__c</fullName>
    <description>QCC: Departure time in UTC</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Departure UTC Date/Time</label>
    <type>DateTime</type>
</CustomField>