force-app/main/default/objects/Case/fields/Details_of_Special_Fare_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Special_Fare_Conditions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Details of Special Fare Conditions</label>
    <type>TextArea</type>
</CustomField>