force-app/main/default/objects/Case/fields/Disrupt_Type__c.field-meta.xml
<CustomField>
    <fullName>Disrupt_Type__c</fullName>
    <description>Added for Insurance Letters in &apos;QCC Insurance Letter Layout&apos;  Case  Page Layout</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Disrupt Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>