force-app/main/default/objects/Case/fields/Disruption__c.field-meta.xml
<CustomField>
    <fullName>Disruption__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this Case is due to a disruption to planned movement of Customer&apos;s Shipment.</inlineHelpText>
    <label>Disruption</label>
    <type>Checkbox</type>
</CustomField>