force-app/main/default/objects/Case/fields/Distinctive_Features_on_Bag__c.field-meta.xml
<CustomField>
    <fullName>Distinctive_Features_on_Bag__c</fullName>
    <description>QCC: Distinctive Features on Bag</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Distinctive Features on Bag</label>
    <length>150</length>
    <type>Text</type>
</CustomField>