force-app/main/default/objects/Case/fields/Distribution_Email__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Email__c</fullName>
    <description>100715-Change Hover Help. (YZ)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the TMC’s email address where you want Dealing Support team to send the Fare Sheet.</inlineHelpText>
    <label>Distribution Email</label>
    <length>250</length>
    <type>Text</type>
</CustomField>