force-app/main/default/objects/Case/fields/Domestic_Regional_X__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Regional_X__c</fullName>
    <inlineHelpText>Customer&apos;s CURRENT contracted Domestic Regional target</inlineHelpText>
    <label>Domestic Regional [ X% ]</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>