force-app/main/default/objects/Case/fields/Domestic_Spend__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Spend__c</fullName>
    <label>Domestic Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>