force-app/main/default/objects/Case/fields/Domestic_Trunk_X__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Trunk_X__c</fullName>
    <inlineHelpText>Customer&apos;s CURRENT contracted Domestic Trunk target</inlineHelpText>
    <label>Domestic Trunk [ X% ]</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>