force-app/main/default/objects/Case/fields/DPR_Reported_Date__c.field-meta.xml
<CustomField>
    <fullName>DPR_Reported_Date__c</fullName>
    <description>QCC: the date the bag was reported to DPR/AHL</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DPR/AHL Reported Date</label>
    <type>Date</type>
</CustomField>