force-app/main/default/objects/Case/fields/Email_Arrival_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Email_Arrival_Date_Time__c</fullName>
    <description>QCC - Used to display date for conga email templates</description>
    <formula>IF( ISBLANK( Actual_Arrival_Date_Time__c), Arrival_Date_Time__c , Actual_Arrival_Date_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Arrival Date/Time</label>
    <type>Text</type>
</CustomField>