force-app/main/default/objects/Case/fields/Email_Content__c.field-meta.xml
<CustomField>
    <fullName>Email_Content__c</fullName>
    <description>Saves the Email content from QBD mails</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>