force-app/main/default/objects/Case/fields/Email_Departure_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Email_Departure_Date_Time__c</fullName>
    <description>QCC - Used for conga email template</description>
    <formula>IF( ISBLANK(  Actual_Departure_Date_Time__c ),  Departure_Date_Time__c  ,  Actual_Departure_Date_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Departure Date/Time</label>
    <type>Text</type>
</CustomField>