force-app/main/default/objects/Case/fields/email_message_Id__c.field-meta.xml
<CustomField>
    <fullName>email_message_Id__c</fullName>
    <description>To capture the incoming email&apos;s unique identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Message Id</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>