force-app/main/default/objects/Case/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <label>Email Template</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complaint Template</fullName>
            </value>
            <value>
                <fullName>Blank Template</fullName>
            </value>
            <value>
                <fullName>EFT Authorisation</fullName>
            </value>
            <value>
                <fullName>EFT Authorisation - No Receipt</fullName>
            </value>
            <value>
                <fullName>Request Further Documentation</fullName>
            </value>
            <value>
                <fullName>Qantas Not Liable</fullName>
            </value>
            <value>
                <fullName>Denial - Outside Timeframe</fullName>
            </value>
            <value>
                <fullName>Repair - Primary Airport</fullName>
            </value>
            <value>
                <fullName>Repair - Secondary Airport</fullName>
            </value>
            <value>
                <fullName>Replacement - Request for Release Form</fullName>
            </value>
            <value>
                <fullName>Replacement - Finalisation</fullName>
            </value>
            <value>
                <fullName>Reimbursement - Request for Release Form</fullName>
            </value>
            <value>
                <fullName>Reimbursement - Finalisation</fullName>
            </value>
            <value>
                <fullName>Medical Assistance Provided</fullName>
            </value>
            <value>
                <fullName>Query</fullName>
            </value>
            <value>
                <fullName>EE Payment Confirmation</fullName>
            </value>
            <value>
                <fullName>Loss or Damage Fragile Items</fullName>
            </value>
            <value>
                <fullName>Loss or damage letter of offer CAA Limit</fullName>
            </value>
            <value>
                <fullName>Loss or damage letter of offer Montreal limit</fullName>
            </value>
            <value>
                <fullName>Refer to Last Carrier for Compensation</fullName>
            </value>
            <value>
                <fullName>Loss of Baggage on QF (Claim Form)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>