force-app/main/default/objects/Case/fields/Emergency_Expense_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Expense_Outcome__c</fullName>
    <description>QCC: Used to displayed the outcome of emergency expenses</description>
    <label>Emergency Expense Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emergency Expense - Domestic Stage</fullName>
            </value>
            <value>
                <fullName>Emergency Expense - International Stage</fullName>
            </value>
            <value>
                <fullName>Not Eligible for Emergency Expenses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>