force-app/main/default/objects/Case/fields/EmergencyExpenseStage__c.field-meta.xml
<CustomField>
    <fullName>EmergencyExpenseStage__c</fullName>
    <description>QCC Backend field, To store the current stage of the Emergency Expense used in CaseTriggerHelper. Only for Delayed baggage.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Emergency Expense Stage</label>
    <length>10</length>
    <type>Text</type>
</CustomField>