force-app/main/default/objects/Case/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>