force-app/main/default/objects/Case/fields/Escalate_To__c.field-meta.xml
<CustomField>
    <fullName>Escalate_To__c</fullName>
    <inlineHelpText>To be used by the QIC and Sales Support Team.
Account Managers does not require to fill this.</inlineHelpText>
    <label>Escalate / Reassign To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Support</fullName>
                <label>AU Sales Support Queue</label>
            </value>
            <value>
                <fullName>US Sales Support Queue</fullName>
            </value>
            <value>
                <fullName>QAC AU Escalation Queue</fullName>
            </value>
            <value>
                <fullName>QAC AU Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>