force-app/main/default/objects/Case/fields/Escalated_From__c.field-meta.xml
<CustomField>
    <fullName>Escalated_From__c</fullName>
    <description>QCC: The owner who escalated the case</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Escalated From</label>
    <length>100</length>
    <type>Text</type>
</CustomField>