force-app/main/default/objects/Case/fields/Escalated_From_Location__c.field-meta.xml
<CustomField>
    <fullName>Escalated_From_Location__c</fullName>
    <description>QCC: The location of the consultant who escalated the case</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Escalated From Location</label>
    <length>250</length>
    <type>Text</type>
</CustomField>