force-app/main/default/objects/Case/fields/Escalated_To__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To__c</fullName>
    <description>QCC: The team leader who the case was escalated to</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Escalated To</label>
    <length>100</length>
    <type>Text</type>
</CustomField>