force-app/main/default/objects/Case/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>QCC: related Flight Event for Cases created as part of proactive Recovery</description>
    <label>Flight Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>