force-app/main/default/objects/Case/fields/Example__c.field-meta.xml
<CustomField>
    <fullName>Example__c</fullName>
    <defaultValue>&quot;As an Account Manager I want to receive a Chatter message when a case which I have raised has been completed so that I am notified when the case has been closed.&quot;</defaultValue>
    <description>To be used on the system admin request layout to display an example of a user story</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Example</label>
    <length>255</length>
    <type>Text</type>
</CustomField>